feat(backend): add MainDriverController
